--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
 
 
 
-<!-- Mirrored from Excelmarktrade.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 08 Dec 2022 16:30:28 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
   <meta charset="utf-8" />
   <title>Excelmark Trade | HOME</title>
-  <meta content="Excelmark Trade Financial is a global systematic investment manager. Our centralized
-  research focuses on the development of advanced quantitative techniques for uncovering market
-  opportunities and employs them within a disciplined framework that results in efficient exposures" name="description" />
   
 
   <link href="./excelmarktrade.com/css/wellness-cms.webflow.5eb1ff288.css" rel="stylesheet" type="text/css" />
