--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
               
               
               <!--<li><a href="./excelmarktrade.com/cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="support@exceltrade.com">[email&#160;protected]</a></li>-->
-			 <li>support@excelmarktrade@gmail.com</li>
+			 <li>support@excelmarktrade.com</li>
               <li>Flat 28 Snowman House, Abbey Road, London, England, NW6 4DN</li>
             </ul>
 
