--- a/excelmarktrade.com/agriculture.html
+++ b/excelmarktrade.com/agriculture.html
@@ -424,7 +424,7 @@
         }
   </script>
 
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 
 <!-- Mirrored from Excelmarktrade.com/agriculture by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 08 Dec 2022 16:33:09 GMT -->
