--- a/excelmarktrade.com/alternatives.html
+++ b/excelmarktrade.com/alternatives.html
@@ -1233,7 +1233,7 @@
         }
   </script>
 
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 
 <!-- Mirrored from Excelmarktrade.com/alternatives by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 08 Dec 2022 16:35:32 GMT -->
