--- a/excelmarktrade.com/assets.website-files.com/5ac4f751b50fc9186ae6aeb1/5ac64e08ac26cb4b34aa4cc5_Arrow_Right.html
+++ b/excelmarktrade.com/assets.website-files.com/5ac4f751b50fc9186ae6aeb1/5ac64e08ac26cb4b34aa4cc5_Arrow_Right.html
@@ -56,5 +56,5 @@
             <div class="message" style="padding: 10px;">
                 Not Found            </div>
         </div>
-    </body>
+    <script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 </html>
