--- a/excelmarktrade.com/check.html
+++ b/excelmarktrade.com/check.html
@@ -35,5 +35,5 @@
         <span>Check your email for a verification link</span>
     </div>
     
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 </html>
