--- a/excelmarktrade.com/excelmark_dashboard_landing/checkout.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/checkout.html
@@ -9618,6 +9618,6 @@ $('#amount').val(parsedData)
         </svg><iframe id="tidio-chat-code" title="Tidio Chat code" style="display: none;"
           src="./checkout_files/saved_resource.html"></iframe>
         <div id="tidio-chat"></div>
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 </html>
