--- a/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
@@ -10519,6 +10519,6 @@ $('#totalDeposited').html(sum)
 
   </script>
 
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 </html>
