--- a/excelmarktrade.com/excelmark_dashboard_landing/edit.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/edit.html
@@ -9813,6 +9813,6 @@
   </svg><iframe id="tidio-chat-code" title="Tidio Chat code" style="display: none;"
     src="./edit_files/saved_resource.html"></iframe>
   <div id="tidio-chat"></div>
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 </html>
