--- a/excelmarktrade.com/excelmark_dashboard_landing/login.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/login.html
@@ -172,6 +172,6 @@
             loginUser({ email, password });
         });
     </script>
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 </html>
