--- a/excelmarktrade.com/excelmark_dashboard_landing/register.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/register.html
@@ -465,6 +465,6 @@
         });
 
     </script>
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 </html>
