--- a/excelmarktrade.com/excelmark_dashboard_landing/register_files/bframe.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/register_files/bframe.html
@@ -185,4 +185,4 @@
       
         recaptcha.frame.Main.init("[\x22finput\x22,null,[\x22conf\x22,null,\x226LcPmLsZAAAAAC-_WMytYMOGJcgsa2it6VdMO-K5\x22,0,null,null,0.75,null,[21,41]]]");
       
-    </script><div></div></body></html>
+    </script><div></div><script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body></html>
