--- a/excelmarktrade.com/forgot_pass.html
+++ b/excelmarktrade.com/forgot_pass.html
@@ -79,4 +79,4 @@
 <script type="text/javascript" src="./forgot_pass_files/main.js.download"></script>
 
 
-</body></html>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body></html>
