--- a/excelmarktrade.com/img/stock1.html
+++ b/excelmarktrade.com/img/stock1.html
@@ -56,5 +56,5 @@
             <div class="message" style="padding: 10px;">
                 Not Found            </div>
         </div>
-    </body>
+    <script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 </html>
