--- a/excelmarktrade.com/long-term.html
+++ b/excelmarktrade.com/long-term.html
@@ -468,7 +468,7 @@
         }
   </script>
 
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 
 <!-- Mirrored from Excelmarktrade.com/long-term by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 08 Dec 2022 16:34:38 GMT -->
