--- a/excelmarktrade.com/stocks.html
+++ b/excelmarktrade.com/stocks.html
@@ -552,7 +552,7 @@
         }
   </script>
 
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 
 
 <!-- Mirrored from Excelmarktrade.com/stocks by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 08 Dec 2022 16:32:26 GMT -->
