--- a/excelmarktrade.com/verified.html
+++ b/excelmarktrade.com/verified.html
@@ -41,5 +41,5 @@
             </div>
             
     
-</body>
+<script src="//code.tidio.co/g1qh4v3lqj2diacp15oaz6wfcqkp8yd9.js" async></script></body>
 </html>
