--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9201,7 +9201,7 @@
                   Requests</span> </a>
             </li>
             <li>
-              <a href="deposits.html"> <i class="fas fa-hand-holding-usd" aria-hidden="true"></i><span>Withdrawal
+              <a href="withdrawalhistory.html"> <i class="fas fa-hand-holding-usd" aria-hidden="true"></i><span>Withdrawal
                   History</span> </a>
             </li>
 
