--- a/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
@@ -9427,7 +9427,7 @@
                   <!-- end title -->
                   <!-- begin conversion-rate -->
                   <div class="d-flex align-items-center mb-3">
-                    <h2 class="text-white mb-1">$<span data-animation="number" id="amountDeposited">0.00</span>
+                    <h2 class="text-white mb-1">$<span data-animation="number" id="totalDeposited">0.00</span>
                     </h2>
                     <div class="ml-auto">
                       <style>
@@ -9525,20 +9525,6 @@
 
                   <!-- end info-row -->
                   <!-- begin info-row -->
-                  <div class="d-flex">
-                    <div class="d-flex align-items-center">
-                      <i class="fa fa-circle text-lime f-s-8 mr-2" aria-hidden="true"></i>
-                      Total Deposited
-                    </div>
-                    <div class="d-flex align-items-center ml-auto">
-                      <div class="d-flex align-items-center ml-auto">
-                        <div class="f-s-12 f-w-600">
-                          $
-                          <span data-animation="number" id="totalDeposited"></span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
                   <!-- end info-row -->
                 </div>
                 <!-- end card-body -->
@@ -9554,13 +9540,13 @@
                 <div class="card-body">
                   <!-- begin title -->
                   <div class="mb-3 text-grey">
-                    <b class="mb-3">TOTAL EARNINGS</b>
+                    <b class="mb-3">WITHDRAWN</b>
                     <span class="ml-2"></span>
                   </div>
                   <!-- end title -->
                   <!-- begin store-session -->
                   <div class="d-flex align-items-center mb-3">
-                    <h2 class="text-white mb-1">$<span data-animation="number" id="totalEarnings">0.00</span>
+                    <h2 class="text-white mb-1">$<span data-animation="number" id="totalWithdrawn">0.00</span>
                     </h2>
                     <div class="ml-auto">
                       <div class="dots">
@@ -9601,18 +9587,6 @@
                   </div>
                   <!-- end info-row -->
                   <!-- begin info-row -->
-                  <div class="d-flex">
-                    <div class="d-flex align-items-center">
-                      <i class="fa fa-circle text-lime f-s-8 mr-2" aria-hidden="true"></i>
-                      Total Withdrawn
-                    </div>
-                    <div class="d-flex align-items-center ml-auto">
-                      <div class="f-s-12 f-w-600">
-                        $
-                        <span data-animation="number" id="totalWithdrawn">0.00</span>
-                      </div>
-                    </div>
-                  </div>
                   <!-- end info-row -->
                 </div>
                 <!-- end card-body -->
