--- a/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
@@ -1285,7 +1285,7 @@
 	     var amount =$('#amount').val()
 
 	    
-	    if(amount>userInfo.balance)
+	    if(amount>userFromLS.balance)
 
 {
 localStorage.setItem("amount",amount)
