--- a/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
@@ -1287,11 +1287,11 @@
 	    
 	    if(amount>userFromLS.balance)
 
-{
-localStorage.setItem("amount",amount)
-location.href="checkout.html"
+{alert("insufficient balance")
 	}
-	    else{alert("insufficient balance")}
+	    else{localStorage.setItem("amount",amount)
+location.href="checkout.html"
+}
 
 }
 
