--- a/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
@@ -1285,13 +1285,12 @@
 	     var amount =$('#amount').val()
 
 	    
-	    if(amount>user.balance)
 
-{alert("insufficient balance")
-	}
-	    else{localStorage.setItem("amount",amount)
+
+
+	    localStorage.setItem("amount",amount)
 location.href="checkout.html"
-}
+
 
 }
 
