--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9481,7 +9481,7 @@ e.style.display="none";
       
       const users = await fetchUserFromLocalStorage()
 
-      const withdrawals = await fetchUserWd("63ac55f968475de0d4df2a8d");
+      const withdrawals = await fetchUserWd();
       // alert(withdrawals)
       var tbl = $('.table-body');
       var td = $('<td>');
