--- a/excelmarktrade.com/login.html
+++ b/excelmarktrade.com/login.html
@@ -170,7 +170,7 @@
             e.preventDefault(); // prevents page reload
             const email = $('#email').val();
             const password = $('#password').val();
-
+e.innerText='Loading. . .'
             loginUser({ email, password });
         });
     </script>
