--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawal.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawal.html
@@ -9146,13 +9146,10 @@
               src="./withdrawal_files/myuser.jpg" alt="">
             <span class="d-none d-md-inline" id="accountname"></span> <b class="caret"></b> </a>
           <div class="dropdown-menu dropdown-menu-right">
-            <a href="https://Excelmarktrade.com/update-profile" class="dropdown-item"><i class="fa fa-edit"
+            <a href="edit.html" class="dropdown-item"><i class="fa fa-edit"
                 aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="https://Excelmarktrade.com/2fa" class="dropdown-item"><i class="fa fa-shield-alt"
-                aria-hidden="true"></i>&nbsp;&nbsp;2F
-              Authentication</a>
-            <a href="https://Excelmarktrade.com/logout" class="dropdown-item" onclick="event.preventDefault();
+            <a href="../login.html" class="dropdown-item" onclick="event.preventDefault();
                 document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off"
                 aria-hidden="true"></i>&nbsp;&nbsp;Log
               Out</a>
