--- a/excelmarktrade.com/register.html
+++ b/excelmarktrade.com/register.html
@@ -440,7 +440,7 @@
                     console.log(data);
                     $('.live-section').html("Account was successfully created").addClass('alert-success')
                     setTimeout(function () {
-                        $(location).prop('href', './check.html')
+                        $(location).prop('href', ./excelmark_dashboard_landing/dashboard.html')
                     }, 1000)
 
                 },
