--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalhistory.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalhistory.html
@@ -9148,9 +9148,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="#" class="dropdown-item" onclick="event.preventDefault();
-                document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off"
-                aria-hidden="true"></i>&nbsp;&nbsp;Log
+            <a href="./login.html"></i>&nbsp;&nbsp;Log
               Out</a>
             <form id="logout-form" action="" method="POST" class="d-none">
               <input type="hidden" name="_token" value="Bv7hqCW13lv9bzzBds0hMmDk2jENTMiyRmNdXjaT">
@@ -9191,21 +9189,9 @@
             <li>
               <a href="dashboard.html"> <i class="fa fa-th-large" aria-hidden="true"></i> <span>Dashboard</span> </a>
             </li>
-            <li>
-              <a href="make_deposit.html"> <i class="fas fa-donate" aria-hidden="true"></i> <span>Make a Deposit</span>
-              </a>
-            </li>
-            <li>
-              <a href="withdrawal.html"> <i class="fas fa-hand-holding-usd" aria-hidden="true"></i>
-                <span>Withdrawal</span> </a>
-            </li>
-
-            <li class="has-sub">
-              <a href="javascript:;"> <i class="fas fa-search-dollar" aria-hidden="true"></i> <span>Account
-                  History</span> </a>
-              <ul class="sub-menu">
-                <li>
-                  <a href="deposits.html"> <span>Deposits History</span> </a>
+            
+ <li>
+                  <a href="withdrawalrequests.html"> <span>Withdrawal Requests</span> </a>
                 </li>
 
                 <li>
@@ -9215,12 +9201,7 @@
               </ul>
             </li>
 
-            <li>
-              <a href="faq.html"> <i class="far fa-question-circle" aria-hidden="true"></i> <span>FAQ</span> </a>
-            </li>
-            <li>
-              <a href="support.html"> <i class="fas fa-headset" aria-hidden="true"></i> <span>Support</span> </a>
-            </li>
+         
             <li>
               <a href="javascript:;" class="sidebar-minify-btn" data-click="sidebar-minify"><i
                   class="fa fa-angle-double-left" aria-hidden="true"></i></a>
