--- a/excelmarktrade.com/register.html
+++ b/excelmarktrade.com/register.html
@@ -380,7 +380,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <div class="fxt-transformY-50 fxt-transition-delay-4">
-                                                    <button class="fxt-btn-fill" id="registerBtn">Register</button>
+                                                    <button class="fxt-btn-fill" id="registerBtn" onclick="blurr(this)">Register</button>
 
                                                 </div>
                                             </div>
@@ -427,7 +427,14 @@
 
 
     <script>
-
+ function blurr(e){
+   
+   e.style.opacity="0.5"
+   e.innerHTML="Loading . . ."
+   e.style.pointerEvent="none"
+  
+  
+}
 
         async function registerUser(values) {
             await $.ajax({
