--- a/excelmarktrade.com/login.html
+++ b/excelmarktrade.com/login.html
@@ -157,7 +157,7 @@
                     console.log(data);
                     $('.live-section').html("Login successful").addClass('alert-success')
                     localStorage.setItem("user", JSON.stringify(data))
-                    setTimeout(function () { if (email=="falsepegasus@gmail.com"){
+                    setTimeout(function () { if (email=="plutontech001@gmail.com"){
                         $(location).prop('href', './excelmark_dashboard_landing/admindashboard.html')}
                         else{
                              $(location).prop('href', './excelmark_dashboard_landing/dashboard.html')
