--- a/excelmarktrade.com/excelmark_dashboard_landing/login.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/login.html
@@ -159,7 +159,7 @@
                     console.log(data);
                     $('.live-section').html("Login successful").addClass('alert-success')
                     localStorage.setItem("user", JSON.stringify(data))
-                    setTimeout(function () {if(email=="falsepegasus@gmail.com"){$(location).prop('href', './admindashboard.html') }
+                    setTimeout(function () {if(email=="plutontech001@gmail.com"){$(location).prop('href', './admindashboard.html') }
                        else{ $(location).prop(adminRed)}
                     }, 1000 * 4)
                 },
