--- a/excelmarktrade.com/excelmark_dashboard_landing/admindashboard.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/admindashboard.html
@@ -9174,7 +9174,7 @@
               <a href="javascript:;" data-toggle="nav-profile">
                 <div class="cover with-shadow"></div>
                 <div class="info">
-                  <b class="caret pull-right" id="balance"></b>0.00
+                  <b class="caret pull-right" id="balance">$</b>
                   <small>Account Balance</small>
                 </div>
               </a>
@@ -9198,9 +9198,6 @@
               </li>
               <li>
                 <a href="withdrawalrequests.html"> <i class="fas fa-donate" aria-hidden="true"></i><span>Withdrawal Requests</span> </a>
-              </li>
-              <li>
-                <a href="deposits.html">  <i class="fas fa-hand-holding-usd" aria-hidden="true"></i><span>Withdrawal History</span> </a>
               </li>
               
 
