--- a/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
@@ -9149,7 +9149,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="#" class="dropdown-item" onclick="event.preventDefault();
+            <a href="login.html" class="dropdown-item" onclick="event.preventDefault();
                 document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off"
                 aria-hidden="true"></i>&nbsp;&nbsp;Log
               Out</a>
