--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9148,7 +9148,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="#" class="dropdown-item" onclick="event.preventDefault();
+            <a href="login" class="dropdown-item" onclick="event.preventDefault();
                 document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off"
                 aria-hidden="true"></i>&nbsp;&nbsp;Log
               Out</a>
@@ -9200,11 +9200,7 @@
               <a href="withdrawalrequests.html"> <i class="fas fa-donate" aria-hidden="true"></i><span>Withdrawal
                   Requests</span> </a>
             </li>
-            <li>
-              <a href="withdrawalhistory.html"> <i class="fas fa-hand-holding-usd" aria-hidden="true"></i><span>Withdrawal
-                  History</span> </a>
-            </li>
-
+         
             </li>
 
             <li>
