--- a/excelmarktrade.com/excelmark_dashboard_landing/login.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/login.html
@@ -88,7 +88,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <div class="fxt-transformY-50 fxt-transition-delay-4">
-                                                    <button class="fxt-btn-fill" onclick="blurr(this)">Log
+                                                    <button class="fxt-btn-fill" onclick="blurr(this)" id="btn">Log
                                                         in</button>
 
                                                 </div>
@@ -139,11 +139,20 @@
     <script type="text/javascript" src="./login_files/particle.js.download"></script>
     <script type="text/javascript" src="./login_files/main.js.download"></script>
     <script>
+        
+        var btn=$( '#btn').val();
+
          function blurr(e){
    
-   e.style.opacity="0.5"
-   e.innerHTML="Loading . . ."
-   e.style.pointerEvent="none"
+   btn.style.opacity="0.5"
+   btn.innerHTML="Loading . . ."
+   btn.style.pointerEvent="none"
+             
+               setTimeout(function () {
+        btn.style.opacity="1";
+ btn.innerHTML="Login"
+
+                       }, 1000 * 3)
   
   
 }
