--- a/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
@@ -731,12 +731,10 @@
             <div class="dropdown-menu dropdown-menu-right">
                 <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
                     Account</a>
-                <a href="#" class="dropdown-item" onclick="event.preventDefault();
-                document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off" aria-hidden="true"></i>&nbsp;&nbsp;Log
+                <a href="./login.html" class="dropdown-item" onclick="event.preventDefault();
+                "><i class="fa fa-power-off" aria-hidden="true"></i>&nbsp;&nbsp;Log
                     Out</a>
-                <form id="logout-form" action="https://Excelmarktrade.com/logout" method="POST" class="d-none">
-                    <input type="hidden" name="_token" value="Bv7hqCW13lv9bzzBds0hMmDk2jENTMiyRmNdXjaT">                </form>
-            </div>
+                </div>
         </li>
     </ul>
     <!-- end header navigation right -->
