all the edit and logout links

--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawal.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawal.html
@@ -9149,13 +9149,10 @@
             <a href="edit.html" class="dropdown-item"><i class="fa fa-edit"
                 aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="../login.html" class="dropdown-item" onclick="event.preventDefault();
-                document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off"
+            <a href="./login.html" class="dropdown-item" ><i class="fa fa-power-off"
                 aria-hidden="true"></i>&nbsp;&nbsp;Log
               Out</a>
-            <form id="logout-form" action="https://Excelmarktrade.com/logout" method="POST" class="d-none">
-              <input type="hidden" name="_token" value="Bv7hqCW13lv9bzzBds0hMmDk2jENTMiyRmNdXjaT">
-            </form>
+            
           </div>
         </li>
       </ul>
