--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9144,17 +9144,14 @@
         <li class="dropdown navbar-user">
           <a href="../.././index.html" class="dropdown-toggle" data-toggle="dropdown"> <img
               src="./deposits_files/myuser.jpg" alt="">
-            <span class="d-none d-md-inline">False Pegasus</span> <b class="caret"></b> </a>
+            <span class="d-none d-md-inline" id="username"></span> <b class="caret"></b> </a>
           <div class="dropdown-menu dropdown-menu-right">
             <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="login" class="dropdown-item" onclick="event.preventDefault();
-                document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off"
+            <a href="./login.html" class="dropdown-item" ><i class="fa fa-power-off"
                 aria-hidden="true"></i>&nbsp;&nbsp;Log
               Out</a>
-            <form id="logout-form" action="" method="POST" class="d-none">
-              <input type="hidden" name="_token" value="Bv7hqCW13lv9bzzBds0hMmDk2jENTMiyRmNdXjaT">
-            </form>
+            
           </div>
         </li>
       </ul>
