--- a/excelmarktrade.com/excelmark_dashboard_landing/faq.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/faq.html
@@ -729,13 +729,11 @@
             <a href="https://Excelmarktrade.com/faq#" class="dropdown-toggle" data-toggle="dropdown"> <img src="./faq_files/myuser.jpg" alt="">
                 <span class="d-none d-md-inline" id="accountname"></span> <b class="caret"></b> </a>
             <div class="dropdown-menu dropdown-menu-right">
-                <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
+                <a href="./edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
                     Account</a>
-                <a href="https://Excelmarktrade.com/logout" class="dropdown-item" onclick="event.preventDefault();
-                document.getElementById(&#39;logout-form&#39;).submit();"><i class="fa fa-power-off" aria-hidden="true"></i>&nbsp;&nbsp;Log
+                <a href="./login.html" class="dropdown-item" ><i class="fa fa-power-off" aria-hidden="true"></i>&nbsp;&nbsp;Log
                     Out</a>
-                <form id="logout-form" action="https://Excelmarktrade.com/logout" method="POST" class="d-none">
-                    <input type="hidden" name="_token" value="Bv7hqCW13lv9bzzBds0hMmDk2jENTMiyRmNdXjaT">                </form>
+               
             </div>
         </li>
     </ul>
