--- a/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/make_deposit.html
@@ -731,8 +731,8 @@
             <div class="dropdown-menu dropdown-menu-right">
                 <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
                     Account</a>
-                <a href="./login.html" class="dropdown-item" onclick="event.preventDefault();
-                "><i class="fa fa-power-off" aria-hidden="true"></i>&nbsp;&nbsp;Log
+                <a href="./login.html" class="dropdown-item" 
+            ><i class="fa fa-power-off" aria-hidden="true"></i>&nbsp;&nbsp;Log
                     Out</a>
                 </div>
         </li>
