--- a/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
@@ -9472,7 +9472,7 @@ var td=$('<td>');
         var row = $('<tr>').appendTo(tbl);
         $('<td>').text(`${user.firstName}`).appendTo(row);
         $('<td>').text(`$${user.balance}`).appendTo(row);
-        $('<td><a  class="btn-primary btn-lg pl-10 w-20 mr-3 m-5" onclick="sendUserDetail(\''+user.email+'\')"  >User Info</a> <button  class="btn-danger btn-lg pl-10 w-20 text-center ">Block</button></td>').appendTo (row);
+        $('<td><a  class="btn-primary btn-lg pl-10 w-20 mr-3 m-5" onclick="sendUserDetail(\''+user.email+'\')"  >User Info</a> </td>').appendTo (row);
         tbl.appendTo($(".table"));
 
        
