--- a/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
@@ -20,8 +20,7 @@
   <link href="./dashboard_files/bootstrap-social.css" rel="stylesheet">
   <script src="./dashboard_files/3233d881f8.js.download" crossorigin="anonymous"></script>
   <!---JQUERY-->
-  <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"
-    integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <style media="all" id="fa-v4-font-face">
     /*!
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
