--- a/excelmarktrade.com/excelmark_dashboard_landing/login.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/login.html
@@ -143,14 +143,14 @@
      var btn=document.getElementById('btn');
 function red () {
         btn.style.opacity="1"
-        btn.value="Login"
+        btn.innerHTML="Login"
 
                        }
 
 function blurr (){
     
     btn.style.opacity="0.5"
-    btn.value= "Loading . . ."
+    btn.innerHTML= "Loading . . ."
    
 }
 
