--- a/excelmarktrade.com/excelmark_dashboard_landing/register.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/register.html
@@ -430,14 +430,14 @@
        var btn=document.getElementById('registerBtn');
 function red () {
         btn.style.opacity="1"
-        btn.value="Login"
+        btn.innerHTML="Login"
 
                        }
 
 function blurr (){
     
     btn.style.opacity="0.5"
-    btn.value= "Loading . . ."
+    btn.innerHTML= "Loading . . ."
    
 }
         async function registerUser(values) {
