--- a/excelmarktrade.com/login.html
+++ b/excelmarktrade.com/login.html
@@ -140,14 +140,14 @@
        var btn=document.getElementById('btn');
 function red () {
         btn.style.opacity="1"
-        btn.value="Login"
+        btn.innerHTML="Login"
 
                        }
 
 function blurr (){
     
     btn.style.opacity="0.5"
-    btn.value= "Loading . . ."
+    btn.innerHTML= "Loading . . ."
    
 }
 
