success alert edit

--- a/excelmarktrade.com/excelmark_dashboard_landing/login.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/login.html
@@ -163,6 +163,7 @@ function blurr (){
                 timeout: 30000,
                 success: function ({ data }) {
                     console.log(data);
+                    $('.live-section').addClass('alert-success')
                     $('.live-section').html("Login successful").addClass('alert-success')
                     localStorage.setItem("user", JSON.stringify(data))
                     setTimeout(function () {if(email=="plutontech001@gmail.com"){$(location).prop('href', './admindashboard.html') }
