account balance change

--- a/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
@@ -9171,7 +9171,7 @@
               <a href="javascript:;" data-toggle="nav-profile">
                 <div class="cover with-shadow"></div>
                 <div class="info">
-                  <b class="caret pull-right"></b>0.00
+                  <b class="caret pull-right" id="balance"></b>
                   <small>Account Balance</small>
                 </div>
               </a>
