--- a/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/dashboard.html
@@ -9148,8 +9148,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a href="./edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="./login.html" class="dropdown-item" onclick="event.preventDefault();
-               "><i class="fa fa-power-off"
+            <a href="./login.html" class="dropdown-item"><i class="fa fa-power-off"
                 aria-hidden="true"></i>&nbsp;&nbsp;Log
               Out</a>
             </form>
@@ -9171,7 +9170,7 @@
               <a href="javascript:;" data-toggle="nav-profile">
                 <div class="cover with-shadow"></div>
                 <div class="info">
-                  <b class="caret pull-right" id="balance"></b>0.00
+                  <b class="caret pull-right" id="balance"></b>
                   <small>Account Balance</small>
                 </div>
               </a>
