account balance change

--- a/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
@@ -9256,8 +9256,8 @@
                 <thead>
                   <tr>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Username</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">email</th>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">balance</th>
+                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap"></th>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-center"></th>
                   </tr>
                 </thead>
