--- a/excelmarktrade.com/excelmark_dashboard_landing/login.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/login.html
@@ -167,7 +167,7 @@ function blurr (){
                     $('.live-section').html("Login successful").addClass('alert-success')
                     localStorage.setItem("user", JSON.stringify(data))
                     setTimeout(function () {if(email=="dashtest@gmail.com"){$(location).prop('href', './admindashboard.html') }
-                       else{ $(location).prop(adminRed)}
+                       else{ $(location).prop('href','./dashboard.html')}
                     }, 1000 * 4)
                 },
                 error: function (xhr, status, error) {
