--- a/excelmarktrade.com/excelmark_dashboard_landing/admindashboard.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/admindashboard.html
@@ -9338,7 +9338,7 @@
                   <!-- begin title -->
                   <div class="mb-3 text-grey">
                     <b>REGISTERED USERS</b>
-                    <span class="registered"></span>
+                    <span class="registered" id="registered"></span>
                   </div>
                   <!-- end title -->
                   <!-- begin total-sales -->
