--- a/excelmarktrade.com/excelmark_dashboard_landing/admindashboard.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/admindashboard.html
@@ -9338,12 +9338,12 @@
                   <!-- begin title -->
                   <div class="mb-3 text-grey">
                     <b>REGISTERED USERS</b>
-                    <span class="registered" id="registered"></span>
+                    <span class="registered" ></span>
                   </div>
                   <!-- end title -->
                   <!-- begin total-sales -->
                   <div class="d-flex">
-                    <h2 class="mb-1"><span data-animation="number" id="accountBalance">0</span>
+                    <h2 class="mb-1"><span data-animation="number" id="registered">0</span>
                     </h2>
                     <div class="ml-auto mt-n1 mb-n1">
                       <div class="dots mt-2">
