--- a/excelmarktrade.com/excelmark_dashboard_landing/userinfo.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/userinfo.html
@@ -1147,8 +1147,8 @@ async function updateProfile({ firstName, lastName, email, balance}) {
     success: function () {
       $('.live-section').addClass("alert-primary").text("Profile updated successfully")
 
-      setTimeout(function () {$(location).prop('href', './activeusers.html')     
-                   }, 1000 * 2)
+      // setTimeout(function () {$(location).prop('href', './activeusers.html')     
+      //              }, 1000 * 2)
 
     }
   });
