--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9257,11 +9257,10 @@
             <!-- end alert -->
             <!-- begin panel-body -->
             <div class="panel-body p-0">
-              <table id="table-responsive" class="table-hover table table-bordere table-td-valign-middle">
+              <table id="table-responsive" class="table-hover table table-border table-td-valign-middle">
                 <thead>
                   <tr>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Username</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Email</th>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Amount</th>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Status</th>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-center">Release</th>
@@ -9370,8 +9369,6 @@ var td=$('<td>');
         withdrawalreq.map(function(request){
             var row = $('<tr>').appendTo(tbl);
         $('<td>').text(`${request.from}`).appendTo(row);
-          $('<td>').text(`$${request.email}`).appendTo(row);
-           
             $('<td>').text(`$${request.amount}`).appendTo(row);
               $('<td>').text(`$${request.status}`).appendTo(row);
                 $('<td><a  class="btn-primary btn-lg pl-10 w-20 mr-3 m-5" onclick="sendUserDetail(\''+request._id+'\')"  >Approve</a></td>').appendTo (row);
