withdrawal requests fix

--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9343,13 +9343,13 @@
       return response.data
     }
 
-    function sendUserDetail(data){
+    function sendUserDetail(request._id){
 
-      alert(data)
+      alert(request._id)
     
 
-     localStorage.setItem("user",user)
-     location.href="userdetails.php.html" 
+    //  localStorage.setItem("user",user)
+    //  location.href="userdetails.php.html" 
 
 
 }
