withdrawal requests fix

--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9365,7 +9365,7 @@
       var tbl = $('.table-body');
 var td=$('<td>');
      users.map(function (user) {
-        const withdrawalreq=user.withdrawals;
+        const withdrawalreq=user.withdrawals.reverse();
         withdrawalreq.map(function(request){
           var identity=request._id;
             var row = $('<tr>').appendTo(tbl);
