withdrawal requests fix

--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9351,8 +9351,8 @@
 
 
 
-    async function sendUserDetail(transactionId){
-    console.log(transactionId)
+    async function sendUserDetail(user){
+    console.log(user)
 
 
     const response = await $.ajax({
