--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawal.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawal.html
@@ -9442,7 +9442,7 @@
                         <div class="f-s-12 text-grey">E-Mail
                         </div>
                         <div class="f-s-12 m-b-5 f-w-600 p-b-1">
-                          <span>falsepegasus@gmail.com</span>
+                          <span id="email"></span>
                         </div>
                         <div class="progress progress-xs rounded-lg bg-dark-darker m-b-5">
                           <div class="progress-bar progress-bar-striped rounded-right" data-animation="width"
