profile updte fix

--- a/excelmarktrade.com/excelmark_dashboard_landing/userinfo.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/userinfo.html
@@ -1165,6 +1165,7 @@ $('#updateBtn').click(async function (e) {
   var email = $('#email').val()
   var balance =parseInt( $('#balance').val())
 
+  console.log(balance)
   await updateProfile({ firstName, lastName, email, balance })
 
 })
