adding depposits link for active users

--- a/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
@@ -9193,6 +9193,10 @@
               <a href="activeusers.html"> <i class="fas fa-search-dollar" aria-hidden="true"></i> <span>
                  Users</span> </a>
             </li>
+            <li>
+              <a href="depositshistory.html"> <i class="fas fa-donate" aria-hidden="true"></i><span>All Deposits</span> </a>
+            </li>
+        
                 <li>
                 <a href="withdrawalrequests.html"> <i class="fas fa-donate" aria-hidden="true"></i><span>Withdrawal Requests</span> </a>
               </li>
